# EA-DogLibrary

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
cmake/: general.cmake  generic-gcc-avr.cmake  include.cmake
lcd_src/: dogm128-graphic.c  dogm128-graphic.h  dogm128.c  dogm128.h
lcd_src/drawing/: drawingDotsAndLines.c  drawingDotsAndLines.h  drawingFigures.c  drawingFigures.h  drawingInclude.h  drawingNumbers.c  drawingNumbers.h  drawingPartlyFigures.c  drawingPartlyFigures.h  drawingText.c  drawingText.h  drawingUtilities.c  drawingUtilities.h
lcd_src/fonts/: font_proportional_16_px.c  font_proportional_8px.c
lcd_src/pics/: logo_ewenetz.c  pic_controlLoop.c  pic_thermometer.c  symbol_abort.c  symbol_back.c  symbol_diskette.c  symbol_disketteRead.c  symbol_disketteWrite.c  symbol_dummy.c  symbol_home.c  symbol_menu.c  symbol_ok.c  symbol_reset.c  symbol_standby.c  symbol_usbstick.c
logging_src/: logging.c  logging.h  ringbuf.c  ringbuf.h  stream.c  stream.h  uart.c  uart.h
sys_src/: iodef.h  main.c
